test_scores/negative_dimers/features/Q17RB8.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q17RB8.pkl.xz